 + You can now disable specific skills in coreskills.yml without the need for permissions
 + Added links to mcMMO related websites to various commands
 + Certain elements of mcMMO's UI have been restyled
 + Added the tagline "Overhaul Era" to various locations until 3.0.0 comes out
 + (Experience) Coral (plants) now give Herbalism XP
 + (Experience) Blue Ice now gives Mining XP
 + (Experience) Drowned mobs now count towards combat XP
 + (Experience) You can now set guaranteed minimum values for XP gained if diminishing returns are enabled, this value defaults to 5% (experience.yml)
 + (Events) Starting an XP event will now use the title API (toggle this in advanced.yml)
 + (Sound) Volume and Pitch of sounds can now be configured in the new sounds.yml file
 + (MySQL) Added support for SSL for MySQL/MariaDB (On by default)
 + (Skills) Adding a new subskill to child skills called 'Understanding The Art' this adds nothing new, but tracks your progress in that child skill, which was previous a bit obfuscated.
 + (Skills) Tool alerts now are sent to the Action Bar
 + (Skills) Super Ability activation alerts are now sent to the Action Bar
 + (Skills) Certain Skill messages are now sent to the Action Bar
 + (Config) Skill Rank requirements are now defined in skillranks.yml you cannot add or remove ranks from this file
 + (Config) Added option to use SSL for MySQL in config.yml
 + (Config) Added option to disable the new URL links to config.yml
 + (Config) New config file added coreskills.yml
 + (Config) Added rank settings for the new Woodcutting skill
 + (Config) Added configurable parameters for the new Tree Feller
 + (Config) Added retro toggle for Tree Feller
 + (Config) Added toggle to disable all scoreboards
 + (Chat) Added ability for admins to spy on party chat (off unless toggled on)
 + (Commands) Added new info command /mmoinfo or /mcinfo
 + (Commands) Added toggle command /mcchatspy
 + (API) Added many missing SubSkills to SubSkillType class